--- a/holycheese-ocr/ocr-platform-service/pom.xml
+++ b/holycheese-ocr/ocr-platform-service/pom.xml
@@ -7,12 +7,95 @@
   </parent>
   <artifactId>ocr-platform-service</artifactId>
   <dependencies>
-        <dependency>
-		  <groupId>org.bytedeco</groupId>
-		  <artifactId>tesseract-platform</artifactId>
-		  <version>4.0.0-1.5</version>
+	  <dependency>
+	  	<groupId>org.holycheese</groupId>
+	    <artifactId>ocr-platform-dao</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>
+	  </dependency>
+    <dependency>
+	  <groupId>org.bytedeco</groupId>
+	  <artifactId>tesseract-platform</artifactId>
+	  <version>4.0.0-1.5</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.baomidou</groupId>
+	    <artifactId>mybatis-plus</artifactId>
+	    <version>3.1.1</version>
+	</dependency>
+	<dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-web</artifactId>
+       </dependency>
+
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-test</artifactId>
+           <scope>test</scope>
+       </dependency>
+
+       <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-eureka</artifactId>
+       </dependency>
+
+       <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-hystrix</artifactId>
+       </dependency>
+
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-actuator</artifactId>
+       </dependency>
+       <dependency>
+           <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-zipkin</artifactId>
+	</dependency>
+       <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-feign</artifactId>
+       </dependency>
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-configuration-processor</artifactId>
+           <optional>true</optional>
+       </dependency>
+    <!-- Test libs -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.mina</groupId>
+			<artifactId>mina-core</artifactId>
+			<version>1.1.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.8</version>
+		</dependency>
+	<!-- 图像二元化 -->
+	<dependency>
+	    <groupId>net.imagej</groupId>
+	    <artifactId>ij</artifactId>
+	    <version>1.52o</version>
+	</dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
