--- a/holycheese-ocr/ocr-platform-service/pom.xml
+++ b/holycheese-ocr/ocr-platform-service/pom.xml
@@ -95,6 +95,23 @@
 	    <artifactId>ij</artifactId>
 	    <version>1.52o</version>
 	</dependency>
+	
+	<dependency>     
+		<groupId>org.apache.pdfbox</groupId>     
+		<artifactId>fontbox</artifactId>     
+		<version>2.0.1</version> 
+	</dependency> 
+	<dependency>   
+		<groupId>org.apache.pdfbox</groupId>   
+		<artifactId>pdfbox</artifactId>  
+		 <version>2.0.1</version> 
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.pdfbox</groupId>
+	    <artifactId>pdfbox-tools</artifactId>
+	    <version>2.0.0-RC1</version>
+	</dependency>
+	
   </dependencies>
   <build>
     <plugins>
