--- a/holycheese-ocr/ocr-platform-service/pom.xml
+++ b/holycheese-ocr/ocr-platform-service/pom.xml
@@ -106,6 +106,12 @@
 			<artifactId>pdfbox-tools</artifactId>
 			<version>2.0.0-RC1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.openpnp</groupId>
+			<artifactId>opencv</artifactId>
+			<version>3.2.0-1</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
