--- a/holycheese-ocr/ocr-platform-service/pom.xml
+++ b/holycheese-ocr/ocr-platform-service/pom.xml
@@ -106,6 +106,22 @@
 			<artifactId>fontbox</artifactId>
 			<version>2.0.16</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.pdfbox</groupId>
+		    <artifactId>jbig2-imageio</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.github.jai-imageio</groupId>
+		    <artifactId>jai-imageio-core</artifactId>
+		    <version>1.4.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.github.jai-imageio</groupId>
+		    <artifactId>jai-imageio-jpeg2000</artifactId>
+		    <version>1.3.0</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
