--- a/holycheese-ocr/ocr-platform-service/src/main/resources/application.yml
+++ b/holycheese-ocr/ocr-platform-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource: 
     type: com.alibaba.druid.pool.DruidDataSource
     platform: mysql
-    url: jdbc:mysql://localhost:3306/data?characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/osaka?characterEncoding=UTF-8
     username: root
     password: 123456
  
