--- a/holycheese-ocr/ocr-platform-dao/src/main/resources/jdbc.properties
+++ b/holycheese-ocr/ocr-platform-dao/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/data
+jdbc.url=jdbc\:mysql\://127.0.0.1\:3306/osaka
 jdbc.username=root
 jdbc.password=123456
 #jdbc.driver=com.mysql.jdbc.Driver
