--- a/holycheese-ocr/ocr-platform-service/pom.xml
+++ b/holycheese-ocr/ocr-platform-service/pom.xml
@@ -121,6 +121,12 @@
 		    <artifactId>jai-imageio-jpeg2000</artifactId>
 		    <version>1.3.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/technology.tabula/tabula -->
+		<dependency>
+		    <groupId>technology.tabula</groupId>
+		    <artifactId>tabula</artifactId>
+		    <version>1.0.3</version>
+		</dependency>
 		
 	</dependencies>
 	<build>
