--- a/holycheese-ocr/ocr-platform-service/pom.xml
+++ b/holycheese-ocr/ocr-platform-service/pom.xml
@@ -127,8 +127,29 @@
 		    <artifactId>tabula</artifactId>
 		    <version>1.0.3</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itextpdf</artifactId>
+		    <version>5.5.13.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>cleanup</artifactId>
+		    <version>2.0.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
+		<!-- <dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itext7-core</artifactId>
+		    <version>7.1.12</version>
+		    <type>pom</type>
+		</dependency> -->
 		
+				
 	</dependencies>
+	
+	
+    
 	<build>
 		<plugins>
 			<plugin>
